--- a/doc/agu21/how-cold.tex
+++ b/doc/agu21/how-cold.tex
@@ -4,9 +4,10 @@
     \begin{framed}
         \begin{figure}
             \centering
-            \includegraphics[width=\textwidth]{historic_events_era5.pdf}
+            \includegraphics[width=\textwidth, trim = 0.25in 0 0 0.75in, clip]{historic_events_era5.pdf}
             \caption{
-                Anomalies of daily mean temperatures from the ERA-5 reanalysis \cite{hersbach_era5:2020} during previous cold snaps demonstrate a qualitative precedent for severe cold.
+                \textbf{Previous cold snaps demonstrate a qualitative precedent for severe cold.}
+                Data shows anomalies of daily mean temperatures from the ERA-5 reanalysis \cite{hersbach_era5:2020}.
             }\label{fig:historic_era5}
         \end{figure}
     \end{framed}
