--- a/doc/agu21/library.bib
+++ b/doc/agu21/library.bib
@@ -5556,6 +5556,19 @@ Subject_term: Communication
   organization = {{Electricity Reliability Council of Texas}}
 }
 
+@report{ercot_sarawinter:2021,
+  title = {Final Seasonal Assessment of Resource Adequacy for the {{ERCOT}} Region ({{SARA}}): Winter 2021/2022},
+  shorttitle = {{{SARA}} Winter},
+  author = {{ERCOT}},
+  date = {2021-11-19},
+  institution = {{Electric Reliability Council of Texas}},
+  url = {https://www.ercot.com/files/docs/2021/11/19/SARA_Winter2021-22.pdf},
+  urldate = {2021-12-06}
+}
+% == BibLateX quality report for ercot_sarawinter:2021:
+% Missing required field 'type'
+% ? Unused version: 17755
+
 @report{ercotpublic_outagesv1:2021,
   title = {February 2021 Extreme Cold Weather Event: Preliminary Report on Causes of Generator Outages and Derates},
   shorttitle = {Outages V1},
