--- a/doc/agu21/poster.tex
+++ b/doc/agu21/poster.tex
@@ -98,7 +98,7 @@
 \newcommand{\footleft}{\textbf{Paper}: How unprecedented was the February 2021 Texas cold snap? \textit{Environmental Research Letters} (2021). \href{https://doi.org/10.1088/1748-9326/ac0278}{doi.org/10.1088/1748-9326/ac0278}.}
 \newcommand{\footright}{\textbf{Codes}: \href{https://github.com/jdossgollin/2021-TXtreme/}{github.com/jdossgollin/2021-TXtreme/}}
 \title{How Unprecedented Was the February 2021 Texas Cold Snap?}
-\author{James Doss-Gollin\inst{*}\inst{1} \quad David J. Farnham\inst{2}\inst{3} \quad Vijay Modi\inst{4} \quad Upmanu Lall\inst{5}}
+\author{James Doss-Gollin\inst{*1} \quad David J. Farnham\inst{2,3} \quad Vijay Modi\inst{4} \quad Upmanu Lall\inst{5}}
 \institute{\inst{*}\href{mailto:jdossgollin@rice.edu}{jdossgollin@rice.edu} \quad \inst{1} Department of Civil and Environmental Engineering, Rice University \quad  \inst{2} ClimateAI \quad \inst{3} Department of Global Ecology, Carnegie Institution for Science \\ \inst{4} Department of Mechanical Engineering, Columbia University \quad \inst{5} Department of Earth and Environmental Engineering, Columbia University}
 
 %-------------------------------------------------------------------
