--- a/doc/agu21/key-findings.tex
+++ b/doc/agu21/key-findings.tex
@@ -1,7 +1,8 @@
 \begin{block}{Key Insights}
     \begin{enumerate}
         \item Had they occurred today, the December 1989 cold snap would have caused more demand for heating than the February 2021 storm, and several other storms would have caused at least 90\% as much
-        \item The Texas grid is designed for summer peak demands, but is highly vulnerable to rare winter freezes
-        \item Population growth and electrification necessitate investment in Texas's energy supply; these must be made with system resilience in mind
+        \item The Texas grid is designed for summer peaks, but is highly vulnerable to rare winter freezes
+        \item Weather at least as cold as that observed during February 2011, which formed and forms the basis for season-ahead preparation \cite{ercotpublic_sarawinter:2020,ercot_sarawinter:2021}, should be expected with probability $\approx$ 1/10
+        \item Population growth and electrification necessitate investment in Texas's energy supply; these must consider system resilience
     \end{enumerate}
 \end{block}
