edits to make everything run smoothly

--- a/scripts/historic_extremes.ipynb
+++ b/scripts/historic_extremes.ipynb
@@ -705,7 +705,7 @@
     "        else:\n",
     "            edate = datetime.strptime(date, \"%Y-%m-%d\").date()\n",
     "            sdate = edate - timedelta(days=dur - 1)\n",
-    "            title = f\"{sdate}-{edate}\"\n",
+    "            title = f\"{sdate} to {edate}\"\n",
     "\n",
     "        C0 = temp_land.sel(time=date, lag=dur).plot.contourf(ax=ax, **contourf_kw)\n",
     "        ax.set_title(title)\n",
@@ -860,7 +860,7 @@
     "        else:\n",
     "            edate = datetime.strptime(date, \"%Y-%m-%d\").date()\n",
     "            sdate = edate - timedelta(days=dur - 1)\n",
-    "            title = f\"{sdate}-{edate}\"\n",
+    "            title = f\"{sdate} to {edate}\"\n",
     "\n",
     "        C0 = tx_temp_land.sel(time=date, lag=dur).plot(ax=ax, **plot_kw)\n",
     "        tx_temp_land.sel(time=date, lag=dur).plot.contour(ax=ax, **contour_kw)\n",
@@ -1033,7 +1033,7 @@
     "        else:\n",
     "            edate = datetime.strptime(date, \"%Y-%m-%d\").date()\n",
     "            sdate = edate - timedelta(days=dur - 1)\n",
-    "            title = f\"{sdate}-{edate}\"\n",
+    "            title = f\"{sdate} to {edate}\"\n",
     "\n",
     "        C0 = bk_temp_roll.sel(time=date, lag=dur).plot.contourf(ax=ax, **contourf_kw)\n",
     "        ax.set_title(title)\n",
